[package]
edition = "2021"
name = "poc-wallet-sube"
version = "1.0.0"

[dependencies]
anyhow = {version = "1.0.57"}
async-std = {version = "1.10.0", features = ["attributes"]}
dirs = {version = "4.0"}
log = {version = "0.4.17"}
structopt = {version = "0.3.26"}

hex = {version = "0.4.3", default-features = false, features = ["alloc"]}
parity-scale-codec = {version = "3.2.1"}
regex = {version = "1.3.3", default-features = false}
serde_json = {version = "1.0", default-features = false, features = ["alloc"]}
sp-core = {version = "7.0.0"}

libwallet = {git = "https://github.com/virto-network/libwallet.git", branch = "master", features = ["vault_pass"]}
scale-info = {version = "2.1.1"}
serde = {version = "1.0.149"}
sube = {git = "https://github.com/pandres95/sube.git", branch = "encode-tx"}
